<resources>
  <string name="app_name">Speech Art</string>
  <string name="tagline">Anywhere for Everyone!</string>
  <string name="welcomeText">Для работы с сервисом необходимо авторизоваться</string>
  <string name="login">Авторизация</string>
  <string name="register">Регистрация</string>
  <string name="email">Почта</string>
  <string name="password">Пароль</string>
  <string name="forgot_your_password">Восстановить доступ</string>
  <string name="continue_text">Продолжить</string>
  <string name="user_name">ФИО</string>
  <string name="passwordRepeat">Повтор пароля</string>
  <string name="i_am_specialist">Я специалист</string>
  <string name="i_am_study">Я пользователь</string>
  <string name="unknown_error">Упс…что-то пошло не так</string>
  <string name="network_error">Проблема с соединением к сети Интернет</string>
  <string name="error_dialog_title">Упс…</string>
  <string name="ok">ОК</string>
  <string name="weak_password">Слабый пароль</string>
  <string name="user_collision">Введенный адрес эл. почты уже используется</string>
  <string name="value_short">Не достигнута минимальная длина</string>
  <string name="is_require">Обязательное поле</string>
  <string name="password_repeat_no_equal">Пароли не совпадают</string>
  <string name="is_no_email">Введенное значение не является адресом эл.почты</string>
  <string name="invalid_email_password">Неверная почта или пароль</string>
  <string name="search_hint">Поиск</string>
  <string name="admins_title">Администраторы</string>
  <string name="users_no_found">Пользователи не найдены</string>
  <string name="exit">exit</string>
  <string name="are_you_sure">Вы уверены?</string>
  <string name="exit_message">Вы уверены, что хотите выйти из аккаунта?</string>
  <string name="delete_exercise_message">Вы уверены, что хотите удалить "%1$s"?</string>
  <string name="delete_specialist_message">Вы уверены, что хотите удалить специалиста \"%1$s\"?</string>
  <string name="delete_admin_message">Вы уверены, что хотите удалить администратора \"%1$s\"?</string>
  <string name="cancel">Отмена</string>
  <string name="yes">Да</string>
  <string name="add_admin">Добавление администратора</string>
  <string name="for_add_admin">Для создания аккаунта администратора сервиса необходимо указать ФИО и адрес эл. почты</string>
  <string name="login_password_new_admin">Авторизационные данные для нового администратора</string>
  <string name="data_copied">Данные скопированы!</string>
  <string name="new_admin_warning">Обязательно скопируйте авторизационные данные администратора. Вы больше не сможете их увидеть!</string>
  <string name="login_password_new_admin_credentials">Email: %1$s\nПароль: %2$s</string>
  <string name="specialists">Специалисты</string>
  <string name="requests">Запросы</string>
  <string name="specialists_title">Специалисты</string>
  <string name="requests_to_specialist_added">Заявка на регистрацию нового специалиста отправлена! Администраторы рассмотрят её в ближайшее время.</string>
  <string name="error_requests_to_specialist_added">Заявка на регистрацию нового специалиста уже отправлена! Администраторы рассмотрят её в ближайшее время. После этого вы сможете авторизоваться под эти аккаунтом.</string>
  <string name="request_sent">Заявка отправлена!</string>
  <string name="requests_title">Запросы</string>
  <string name="requests_no_found">Запросы на регистрацию специалистов не найдены</string>
  <string name="specialists_no_found">Специалисты не найдены</string>
  <string name="admins_no_found">Администраторы не найдены</string>
  <string name="requests_to_check">Выполненые</string>
  <string name="profile">Профиль</string>
  <string name="exercises">Упражнения</string>
  <string name="description_no_set">Описание не установленно</string>
  <string name="edit_description">Редактирование описания</string>
  <string name="edit_description_subtext">Укажите информацию об образовании, оконченых курсах, тренингах; опыт работы; приведите методы, которые используйте в своей работе и так далее.</string>
  <string name="description">Описание</string>
  <string name="easy">Простой уровень</string>
  <string name="medium">Средний уровень</string>
  <string name="advanced">Продвинутый уровень</string>
  <string name="exercises_no_found">Упражнения не найдены</string>
  <string name="add_exercise">Создание упражнения</string>
  <string name="add_exercise_description">Для создания нового упражнения укажите его название, описание, уровень сложности, текст, который будет предложен пользователю для тренировки, а так же приложите файл с эталонным выполнением данного уражнения.</string>
  <string name="name">Название</string>
  <string name="add_exercise_text">Текст упражнения</string>
  <string name="file_no_picked">Файл не выбран</string>
  <string name="reference_pronunciation">Эталонное произношение</string>
  <string name="pause">Пауза</string>
  <string name="stop">Стоп</string>
  <string name="recording">Идёт запись!</string>
  <string name="start_recording">Начать запись</string>
  <string name="delete_record">Удалить запись</string>
  <string name="send_to_check">На проверку</string>
  <string name="play">Пуск</string>
  <string name="performed_exercises">Выполненные упражнения</string>
  <string name="performed_exercises_user_info">%1$s (Счет: %2$d)</string>
  <string name="user_record">Запись пользователя</string>
  <string name="conclusion">Заключение</string>
  <string name="conclusion_description">Замечания, рекомендации, упражнения и т.д</string>
  <string name="no_specialist_answered">Специалист ещё не проверил выполнение упражнения</string>
  <string name="review">Отзыв</string>
  <string name="sendReview">Отправить отзыв</string>
  <string name="review_text">Оценка услуги</string>
  <string name="you_can_send_review_after_check">Вы можете оставить отзыв специалисту только после того, как он проверит</string>
  <string name="reviews">Отзывы</string>
  <string name="reviews_no_found">Отзывы не найдены</string>
  <string name="recovery_password">Восстановление пароля</string>
  <string name="recovery_password_description">Для восстановления пароля необходимо ввести адрес электронной почты, который был указан при создании аккаунта.</string>
  <string name="recovery_password_after">Если введенный адрес электронной почты окажется действительным, то на почту придет письмо с дальнейшими действиями</string>
  <string name="agree">Принять</string>
  <string name="disagree">Отклонить</string>
  <string name="for_record_audio_we_need_permission">Для записи аудиозаписи необходимо предоставить доступ</string>
  <string name="permission_for_record_title">Разрешение для записи</string>
  <string name="permission_for_record_description">Для записи аудиозаписи необходимо предоставить доступ к микрофону в настройках приложения.</string>
  <string name="permission_for_record_warning">(нажмите на текст выше для быстрого перехода в настройки)</string>
  <string name="score">Счёт: %1$dxp</string>
  <string name="exercise_deleted">Упражнение удаленно</string>
  <string name="no_data">Данные отсутствуют</string>
  <string name="user_deleted">Пользователь удален</string>
  <string name="document_no_found">Документ не найден</string>
  <string name="user_document_not_found">Данные о пользователе не найдены.</string>
  <string name="user_document_not_found_message">Вероятно запись о вашем аккаунте была уничтожена, то есть пользователь был удален.</string>
  <string name="delete">Удалить</string>
  <string name="user_record_transparency_level">Уровень прозрачности записи пользователя</string>
</resources>