<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/secondary_color"
      android:gravity="center"
      android:paddingHorizontal="15dp"
      android:paddingVertical="10dp">

      <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_add"
        app:tint="@color/on_secondary_color" />

      <TextView
        android:id="@+id/textTitle"
        style="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:text="@string/add_admin"
        android:textColor="@color/on_secondary_color"
        android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp">

      <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_color"
        android:text="@string/for_add_admin" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutFullName"
        style="@style/FieldWrapper.contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/fullName"
          style="@style/FieldContent.contrast"
          android:autofillHints="username"
          android:imeOptions="actionNext"
          android:inputType="textPersonName" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        style="@style/FieldWrapper.contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/email"
          style="@style/FieldContent.contrast"
          android:autofillHints="emailAddress"
          android:imeOptions="actionNext"
          android:inputType="textEmailAddress" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/buttonYes"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/on_secondary_color"
        app:backgroundTint="@null"
        app:tint="@null" />


    </LinearLayout>

  </LinearLayout>
</layout>