<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/primary_color"
      android:gravity="center"
      android:paddingHorizontal="15dp"
      android:paddingVertical="10dp">

      <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_edit"
        app:tint="@color/on_secondary_color" />

      <TextView
        android:id="@+id/textTitle"
        style="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:text="@string/edit_description"
        android:textColor="@color/on_secondary_color"
        android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp">

      <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/edit_description_subtext"
        android:textColor="@color/text_color" />


      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDescription"
        style="@style/FieldWrapper.contrast"
        android:layout_width="match_parent"
        app:errorEnabled="false"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/description"
          style="@style/FieldContent.contrast"
          android:gravity="top"
          android:imeOptions="actionNext"
          android:inputType="textMultiLine"
          android:lines="10"
          android:maxLines="15" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/buttonContinue"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/on_secondary_color"
        app:backgroundTint="@null"
        app:tint="@null" />


    </LinearLayout>

  </LinearLayout>
</layout>